package com.ttokey.coupon.entity;

import java.time.LocalDateTime;

public class Group {
    private String id;

    private String name;
    private String description;

    private LocalDateTime createdAt;
    private LocalDateTime updatedAt;
}
