package com.ttokey.coupon.entity;

public class GroupCoupon {
    private String id;

    private String groupId;
    private String couponId;
}
