package com.ttokey.coupon.entity;

public class UserGroup {
    private String id;

    private String userId;
    private String groupId;
}
