@startuml
'https://plantuml.com/class-diagram


database MySQL{
    entity User {
        id : String
        ---
        name : String
        userId : String
        password : String
        phoneNumber : String
        custStatus : String
        createdAt : LocalDateTime
        updatedAt : LocalDateTime
    }

    entity Group {
        id : String
        ---
        name : String
        description : String
        createdAt : LocalDateTime
        updatedAt : LocalDateTime
    }

    entity Coupon {
        id : String
        ---
        imagePath : String
        status : String
        owner : String
        createdBy : String
        createdAt : LocalDateTime
        updatedBy : String
        updatedAt : LocalDateTime
        ---
        (company) : String
        (menuName) : String
        (price) : Long
        (barcode) : String
        (dueDate) : LocalDateTime
    }

    entity CouponHistory {
        id : String
        ---
        couponId : String
        imagePath : String
        status : String
        owner : String
        createdBy : String
        createdAt : LocalDateTime
        ---
        (company) : String
        (menuName) : String
        (price) : Long
        (barcode) : String
        (dueDate) : LocalDateTime
    }

    entity UserGroup {
        id : String
        userId : String
        groupId : String
    }

    entity GroupCoupon {
        id : String
        groupId : String
        couponId : String
    }
}

Group ||--o{ GroupCoupon : id = groupId
Coupon ||--o{ GroupCoupon : id = couponId
User ||--o{ UserGroup : id = userId
Group ||--o{ UserGroup : id = groupId

Coupon ||--|{ CouponHistory : id = couponId


@enduml
